# formative

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  package-lock.json  pyproject.toml  settings.py  setup.cfg  urls.py
assets/: apply.js  formative.js  package-lock.json  package.json  review.js  webpack.config.js
assets/js/: apply.js  formative.js  main.js  review.js
assets/js/stock/: address.js  choiceset.js
assets/scss/: main.scss
assets/scss/libs/: markdown.scss  reset.scss
assets/scss/stock/: address.scss  choiceset.scss
config/: celery.py  django_env  gunicorn.conf.py  postfix_env  wsgi.py
config/db/: database_env
config/nginx/conf.d/: local.conf
formative/: admin.py  apps.py  backends.py  forms.py  middleware.py  plugins.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
formative/admin/: __init__.py  actions.py  formative.py
formative/filetype/: __init__.py  av.py  document.py  image.py
formative/forms/: __init__.py  admin.py  formative.py
formative/migrations/: 0001_initial.py  0002_initial.py  0003_submissionrecord_and_more.py  0004_alter_form_db_slug_alter_form_slug_and_more.py  0005_alter_formblock__rank.py  0006_alter_formblock__rank.py  0007_alter_collectionblock_align_type.py  0008_site_program_sites.py  0009_custom_user_model.py  0010_alter_user_options_user_site_user_uniq_site_email_and_more.py
formative/models/: __init__.py  automatic.py  formative.py  ranked.py  site.py
formative/stock/: __init__.py  address.py  choiceset.py  date.py  email.py  name.py  phone.py  url.py
formative/templatetags/: form_block.py  form_signal.py  patched_widget_tweaks.py  program.py  utils.py
resources/: run
resources/nginx/: local.conf
resources/s6-rc.d/celery/: run
resources/s6-rc.d/djangoapp/: finish  run
resources/s6-rc.d/nginx/: run
resources/s6-rc.d/redis/: run
resources/s6-rc.d/setup1/: up
resources/s6-rc.d/setup2/: up
resources/s6-rc.d/setup3/: up
reviewpanel/: __init__.py  admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  signals.py  urls.py  utils.py  validators.py  views.py  wsgi.py
reviewpanel/migrations/: 0002_initial.py
reviewpanel/models/: __init__.py  ranked.py  reviewpanel.py
reviewpanel/stock/: __init__.py  email.py  name.py
reviewpanel/templatetags/: form_block.py  program.py  utils.py
templates/: 500.html  base.html  error_base.html  index.html
templates/admin/: base_site.html  unpublish_confirmation.html
templates/admin/formative/: change_list_object_tools.html  confirmation.html  copy_form.html  email_applicants.html  export_submissions.html  files_download.html  form_plugins.html  import_users.html  manage_files.html  move_page.html  submit_confirmation.html  submit_line.html  unpublish_confirmation.html
templates/apply/: base.html  collection_block.html  collection_item.html  collection_items_new.html  continue.html  custom_block.html  custom_block_text.html  form.html  index.html  program.html  program_forms.html  review.html  review_block.html  submission.html
templates/apply/emails/: continue.html
templates/apply/stock/: email.html  name.html  textfield.html
templates/formative/: base.html  collection_block.html  collection_item.html  collection_items_new.html  continue.html  custom_block.html  custom_block_boolean.html  custom_block_choice.html  custom_block_text.html  form.html  index.html  label_vertical.html  program.html  program_forms.html  review.html  review_block.html  review_collection.html  submission.html  thanks.html  tooltips.html
templates/formative/emails/: confirmation.html  confirmation_subject.html  continue.html  continue_subject.html
tests/: conftest.py  test_data.py
(+23 files in other folders)
