[tool.poetry]
name = "formative"
version = "0.7.7"
description = ""
authors = ["John Kyle Cronan"]
license = "LGPL-2.1"

[tool.poetry.dependencies]
python = "^3.8"
"backports.zoneinfo" = { version = "*", python = "~3.8" }
django = "~=4.0"
gunicorn = "*"
psycopg2 = "*"
django-environ = "*"
django-webpack-loader = "*"
django-polymorphic = "*"
django-jazzmin = "*"
django-widget-tweaks = "*"
markdown = "*"
pillow = "*"
pikepdf = "*"
ffmpeg-python = "*"
django-localflavor = "^3.1"
markdown-link-attr-modifier = "^0.2.0"
django-better-admin-arrayfield = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"
pytest-env = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
