[tool.poetry]
name = "formative"
version = "0.9.1"
description = "Self-hosted web app for collecting form responses and files"
authors = ["John Kyle Cronan"]
license = "LGPL-2.1"
readme = "README.md"
homepage = "https://github.com/johncronan/formative"
repository = "https://github.com/johncronan/formative"
keywords = ["forms", "form", "builder", "django", "formative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Multimedia",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
include = ["manage.py", "settings.py", "urls.py", "templates", "Dockerfile",
           "assets", "captain-definition", "config", "docker-compose.yml"]

[tool.poetry.dependencies]
python = "^3.8"
"backports.zoneinfo" = { version = "*", python = "~3.8" }
django = "~=4.0"
gunicorn = "*"
psycopg2 = "*"
redis = "*"
django-environ = "*"
django-webpack-loader = "*"
django-polymorphic = "*"
django-jazzmin = "*"
django-widget-tweaks = "*"
markdown = "*"
pillow = "*"
pikepdf = ">=5.1.1"
ffmpeg-python = "*"
django-localflavor = "^3.1"
markdown-link-attr-modifier = "^0.2.0"
django-better-admin-arrayfield = "^1.4.2"
whitenoise = "^6.0.0"
reviewpanel = { version = "^0.6.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"
pytest-env = "*"

[tool.poetry.extras]
reviewpanel = ["reviewpanel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
